style2.css
/*Nav Bar*/
@import url("https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap");

*{
  border-radius: 0;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
}
body{
  background: #000;
  min-height: 200vh;
  background-image: url(Pictures/BGI.png);
  background-size: cover;
  background-attachment: fixed;
  backdrop-filter: blur(40px);
}
header{
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  transition: 0.6s;
  padding: 40px 100px;
  z-index: 100000;
}
header.sticky{
  padding: 5px 100px;
  background: #fff;
}
header .logo{
  position: relative;
  font-weight: 700;
  color: #fff;
  text-decoration: none;
  font-size: 2em;
  text-transform: uppercase;
  letter-spacing: 2px;
  transition: 0.6s;
}
header ul{
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
}
header ul li{
  position: relative;
  list-style: none;
}
header ul li a{
  position: relative;
  margin: 0 15px;
  text-decoration: none;
  color: #fff;
  letter-spacing: 2px;
  font-weight: 500px;
  transition: 0.6s;
}
/* --##banner image##--
.banner{
  position: relative;
  width: 100%;
  height: 100vh;
  background: url(Pictures/sasuke.jpg);
  background-size: cover;
} */
header.sticky .logo,
header.sticky ul li a{
  color: #000;
}

/* section parralax (About) */

section{
  position: absolute;
  width: 100%;
  height: 100vh;
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
}
section img{
  position: absolute;
  top: 0;
  left: 0;
  width: 96%;
  height: auto;
  object-fit: cover;
}
section h2{
  position: relative;
  color: #fff;
  font-size: 12em;
}

    /* parralax background */

.space1{
  width: 100%;
  height: auto;
}

/* container widgets */

.widget{
  display: flex;
  justify-content: center;
  align-items: center;
  height: 1000px;
}
.widget .container{
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 1000px;
  position: relative;
}
.widget .container .card{
  position: relative;
}
.widget .container .card .face{
  width: 300px;
  height: 200px;
  transition: 0.5s;
}
.widget .container .card .face.face1{
  position: relative;
  background: #333;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1;
  transform: translateY(100px);
}
.widget .container .card:hover .face.face1{
  background: #ff0057;
  transform: translateY(0);
}
.widget .container .card:hover:nth-child(2) .face.face1{
  background: #57ff00;
}
.widget .container .card:hover:nth-child(3) .face.face1{
  background: #0057ff;
}
.widget .container .card .face.face1 .content{
  opacity: 0.75;
  transition: 0.5s;
}
.widget .container .card:hover .face.face1 .content{
  opacity: 1;
}
.widget .container .card .face.face1 .content img{
  max-width: 100px;
}
.widget .container .card .face.face1 .content h3{
  margin: 10px 0 0;
  padding: 0;
  color: #fff;
  text-align: center;
  font-size: 1.5em;
}
.widget .container .card .face.face2{
  position: relative;
  background: #fff;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 20px;
  box-sizing: border-box;
  box-shadow: 0 20px 50px rgba(0,0,0,0.8);
  transform: translateY(-100px);
}
.widget .container .card:hover .face.face2{
  transform: translateY(0);
}
.widget .container .card .face.face2 .content p{
  margin: 0;
  padding: 0;
}
.widget .container .card .face.face2 .content a{
  margin: 15px 0 0;
  display: inline-block;

  text-decoration: none;
  font-weight: 900;
  color: #333;
  padding: 5px;
  border: 1px solid #333;
}
.widget .container .card .face.face2 .content a:hover{
  background: #333;
  color: #fff;
}

